methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:1: error: Missing closing brace `}' assumed here
def haveBaggle():Boolean = {
^MethodsReturning:1: error: expected class or object definition
def haveBaggle():Boolean = {
^