methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
	var vuBiscuit:Boolean =false
	var i:Int=0
  var i2:Int=0
  
  
  for(i<-0 to 5){
    avance()
    if(estSurBiscuit()==true){
      vuBiscuit=true
    }

  }
  for(i2<-0 to 5){
    recule()
  }
  return vuBiscuit

	